<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4215105690061587/7707206650</string>
    <string name="admob_ap_id" translatable="false">ca-app-pub-4215105690061587~1169718468</string>
    <string name="encoded_key" translatable="false" >MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuHpMkp0RqQJ4CzsokYgM0kkzAXgffvRI9aQCS5KYGsSe6RIAZHqvZurxjWjQNkpKHwRa5IdDHZD7BUsA1+pooJtyPRZLEvCAlXf1XNY93clF9UEHz77fp29RuzTEGtlZysUk56Do5++FKKcwa4UEJkobyObTCzo6e+jVMy23gFX2A0HP25aP4RUfX5UsPjFpPMydGgGyLZoD5TcQVB1aLvUSCCdTuQpgkEEB4Cdqd09VlYXSrgJqDg4f0+ZbDM06UvE63XEmtnj79ivu5adm9S1NLNHkFor9DbTrMgNWvvcFCIMPkMxlcRYS0ewdFptA8mKmDABMBEq12rCkjOFSSwIDAQAB</string>
    <string name="app_name">История России</string>
    <string name="app_backup_activity">.BackupActivity</string>
    <string name="app_name_spec"> </string>
    <string name="app_data_file">data.json</string>
    <string name="app_detail_file">details.json</string>
    <string name="app_structure_file">navstructure.json</string>
    <string name="tabs_starred_order" translatable="false">normal</string>
    <string name="tabs_starred_display" translatable="false">item_prior</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="contact_error">Сообщить об ошибке</string>
    <string name="contact_feedback">Отправить отзыв</string>
    <string name="contact_pro">PRO version</string>
    <string name="contact_rate">Оценить приложение</string>
    <string name="contact_website">Посетить веб-сайт</string>
    <string name="nav_home_txt">Главная</string>
    <string name="nav_gallery_txt">Галерея</string>
    <string name="nav_starred_txt">Избранное</string>
    <string name="nav_stats_txt">Статистика</string>
    <string name="nav_settings_txt">Настройки</string>
    <string name="nav_info_txt">Справка</string>
    <string name="nav_contact_txt">Контакты/отзыв</string>
    <string-array name="menu_titles">
        <item>@string/title_home_txt</item>
        <item>@string/title_gallery_txt</item>
        <item>@string/title_starred_txt</item>
        <item>@string/title_stats_txt</item>
        <item>@string/nav_notes_txt</item>
        <item>@string/title_settings_txt</item>
        <item>@string/title_info_txt</item>
        <item>@string/title_contact_txt</item>
    </string-array>
    <string name="title_main_txt">@string/app_name</string>
    <string name="title_home_txt">Главная</string>
    <string name="title_gallery_txt">Галерея</string>
    <string name="title_starred_txt">Избранное</string>
    <string name="title_stats_txt">Статистика</string>
    <string name="title_settings_txt">Настройки</string>
    <string name="title_info_txt">Справка</string>
    <string name="title_contact_txt">Контакты/отзыв</string>
    <string name="title_test_txt">Тест</string>
    <string name="title_card_txt">Карточки</string>
    <string name="title_starred_activity">Избранное</string>
    <string name="title_errors_txt">Ошибки</string>
    <string name="title_custom_txt">Список</string>
    <string name="title_activity_cat">CatActivity</string>
    <string name="section_tab1_title">Список</string>
    <string name="section_tab2_title">Изучение</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="voc_ex_link_card_title">Карточки</string>
    <string name="voc_ex_link_first_title">Тест 1</string>
    <string name="voc_ex_link_second_title">Тест 2</string>
    <string name="starred_ex_link_title">Тест с избранными</string>
    <string name="voc_ex_link_first_desc">Тест: Событие / Дата</string>
    <string name="voc_ex_link_second_desc">Тест: Дата / Событие</string>
    <string name="section_ex_link_title_1">Общий тест 1</string>
    <string name="section_ex_link_title_2">Общий тест 2</string>
    <string name="section_ex_link_title_3">Общий тест 3</string>
    <string name="section_ex_link_desc_3">Тест на личности и термины</string>
    <string name="voc_ex_link_third_title">Упражнение 3</string>
    <string name="voc_ex_link_card_desc">Изучение отдельных записей</string>
    <string name="voc_ex_link_third_desc">Тест с вариантами ответа</string>
    <string name="title_activity_cards">CardsActivity</string>
    <string name="f_menu_show_translate">Показывать ответ</string>
    <string name="f_menu_shuffle">Перемешать</string>
    <string name="f_menu_reflect">Перевернуть</string>
    <string name="f_menu_restart">Начать заново</string>
    <string name="f_activity_title">Карточки</string>
    <string name="f_counter_txt">%1$d / %2$d</string>
    <string name="f_show_translate_txt">ПОКАЗАТЬ ОТВЕТ</string>
    <string name="f_back_btn_txt">Назад</string>
    <string name="f_next_btn_txt">Дальше</string>
    <string name="ex_menu_buttons">Кнопки</string>
    <string name="set_ex_buttons">Отображать кнопки</string>
    <string name="ex_text_foo">Текст</string>
    <string name="image_desc">Image</string>
    <string name="title_activity_exericse">ExericseActivity</string>
    <string name="ex_menu_restart">Начать заново</string>
    <string name="ex_counter_txt">%1$d / %2$d</string>
    <string name="ex_option_foo">Вариант</string>
    <string name="ex_txt_title">Упражнение</string>
    <string name="ex_txt_correct">ПРАВИЛЬНО</string>
    <string name="ex_txt_incorrect">НЕПРАВИЛЬНО</string>
    <string name="ex_check_btn_txt">Проверить</string>
    <string name="ex_show_result_btn_txt">Показать результат</string>
    <string name="ex_restart_btn_txt">Начать заново</string>
    <string name="ex_next_btn_txt">Дальше</string>
    <string name="ex_result_txt_excellent">ОТЛИЧНО!</string>
    <string name="ex_result_txt_verygood">ОЧЕНЬ ХОРОШО!</string>
    <string name="ex_result_txt_good">ХОРОШО</string>
    <string name="ex_result_txt_bad">ПЛОХО</string>
    <string name="ex_result_txt_verybad">ОЧЕНЬ ПЛОХО!</string>
    <string name="ex_result_txt">Правильно: %1$d из %2$d \n Результат:\u00A0\u00A0\u00A0 %3$d%%</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="starred_ex_notif">Упражнения станут доступны, когда в избранное будут добавлены новые записи.</string>
    <string name="title_activity_cat_stats">CatStatsActivity</string>
    <string name="title_activity_cat_data_stats">CatDataStatsActivity</string>
    <string name="title_activity_custom_data_list">CustomDataListActivity</string>
    <string name="starred_limit">Не добавлено. Достигнут лимит</string>
    <string name="dialog_close_txt">Закрыть</string>
    <string name="continue_txt">Продолжить</string>
    <string name="menu_item_info">Справка</string>
    <string name="starred_lessons_results">Показать результаты теста </string>
    <string name="set_starred_result_summary">Отображение результатов</string>
    <string name="set_interface">ИНТЕРФЕЙС</string>
    <string name="set_app_theme_title">Тема приложения</string>
    <string name="set_theme_default_name">Основная</string>
    <string name="set_theme_dark_name">Черная</string>
    <string name="set_theme_smoky_name">Темная</string>
    <string name="set_theme_red_name">Красная</string>
    <string name="set_theme_white_name">Белая</string>
    <string name="set_theme_ww_name">Контрастная</string>
    <string name="set_night_theme">Ночной режим для светлых тем</string>
    <string name="set_night_theme_on">Активирован</string>
    <string name="set_night_theme_off">Отключен</string>
    <string name="set_starred_sort_title">Сортировка списка избранных</string>
    <string name="set_starred_sort_sum">Текущая: %s</string>
    <string name="set_starred_sort_title_dialog">Выберите сортировку</string>
    <string name="set_starred_section">ИЗБРАННОЕ</string>
    <string-array name="starred_list_sort">
        <item>Новые в начале </item>
        <item>Новые в конце</item>
        <item>По порядку уроков</item>
    </string-array>
    <string-array name="starred_list_sort_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="set_starred_save_title">Сохранение результатов</string>
    <string name="set_starred_save_sum">Текущее: %s</string>
    <string name="set_starred_save_title_dialog">Сохранение</string>
    <string-array name="starred_list_save">
        <item>Последние результаты </item>
        <item>Лучшие результаты</item>
    </string-array>
    <string-array name="starred_list_save_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="set_control_title">Результат тестов раздела</string>
    <string name="set_control_summary">Учет в статистике: %s</string>
    <string name="set_control_dialog_title">Учитывать результаты</string>
    <string name="set_control_tests_one">Если результат выше</string>
    <string name="set_control_tests_two">Всегда</string>
    <string name="set_control_tests_three">Никогда</string>
    <string name="set_test_all_limit_title">Заданий в общем тесте</string>
    <string name="set_test_all_limit_summary">Максимальное количество: %s</string>
    <string name="set_test_all_limit_dialog_title">Общий тест</string>
    <string name="set_test_all_limit_1">30 заданий</string>
    <string name="set_test_all_limit_2">60 заданий</string>
    <string name="set_test_all_limit_3">100 заданий</string>
    <string name="set_sort_pers_title">Сортировка личностей</string>
    <string name="set_sort_pers_summary">Текущая: %s</string>
    <string name="set_sort_pers_dialog_title">Сортировка</string>
    <string name="set_sort_pers_1">по хронологии</string>
    <string name="set_sort_pers_2">по алфавиту</string>
    <string name="set_btm_nav_title">Нижняя панели навигации</string>
    <string name="set_btm_nav_summary">%s</string>
    <string name="set_data_control_title">Выбор данных раздела</string>
    <string name="set_data_control_summary">Учет в статистике: %s</string>
    <string name="set_data_control_dialog_title">Учитывать в разделе</string>
    <string name="set_data_mode_title">Режим</string>
    <string name="set_data_mode_summary">Текущий: %s</string>
    <string name="set_data_mode_dialog_title">Выбрать режим</string>
    <string name="set_show_status">Cтатус изученности в списках</string>
    <string name="set_show_status_summary">Отображение: %s</string>
    <string name="set_show_status_dialog_title">Отображать статус</string>
    <string name="set_detail_txt">Размер шрифта в доп. информации</string>
    <string name="set_detail_txt_summary">Текущий: %s</string>
    <string name="set_detail_txt_dialog_title">Размер шрифта</string>
    <string name="purchase_txt">Получите полную версию приложения без рекламы</string>
    <string name="get_premium_thank">Спасибо!</string>
    <string name="get_premium_buy">Купить</string>
    <string name="purchased_txt">Чтобы продолжить работу с приложением, нажмите «Продолжить»</string>
    <string name="ex_save_stats">Сохранять статистику </string>
    <string name="fullversion_desc_txt">Ура! У вас установлена полная версия приложения.</string>
    <string name="starred_confirm_title">Подтверждение удаления</string>
    <string name="set_starred_confirm_summary">Подтверждать удаление из избранного</string>
    <string name="menu_easy_mode">Упрощенный режим</string>
    <string name="menu_layout">Раскладка</string>
    <string name="item_status_unknown">Статус: не пройдено</string>
    <string name="item_status_familiar">Статус: пройдено</string>
    <string name="item_status_studied">Статус: изучено</string>
    <string name="pic_link">Ссылка на источник</string>
    <string name="image_info_title">Изображение</string>
    <string name="image_info_desc">Описание</string>
    <string name="menu_img_test">Пройти тест</string>
    <string name="nav_notes_txt">Заметки</string>
</resources>