<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.mironov.standard.Flashcard">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/fShowTranslate"
            android:orderInCategory="100"
            android:title="@string/f_menu_show_translate"
            android:checked="false"
            app:showAsAction="never" />
    </group>
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/fRemixWords"
            android:orderInCategory="100"
            android:title="@string/f_menu_shuffle"
            android:checked="false"
            app:showAsAction="never" />
    </group>
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/fReflectInfo"
            android:orderInCategory="100"
            android:title="@string/f_menu_reflect"
            android:checked="false"
            app:showAsAction="never" />
    </group>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/exBtnSettings"
            android:orderInCategory="100"
            android:title="@string/ex_menu_buttons"
            android:checked="true"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/fRestart"
        android:orderInCategory="100"
        android:title="@string/f_menu_restart"
        app:showAsAction="never" />

    <item
        android:id="@+id/easy_mode"
        android:orderInCategory="50"
        android:icon="?attr/iconSchool"
        android:title="@string/menu_easy_mode"
        android:visible="false"
        app:showAsAction="always" />
</menu>