<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="all">
            <item
                android:id="@+id/exBtnSettings"
                android:orderInCategory="100"
                android:title="@string/ex_menu_buttons"
                android:checked="true"
                app:showAsAction="never" />
    </group>
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/test_save"
            android:orderInCategory="100"
            android:title="@string/ex_save_stats"
            android:checked="false"
            app:showAsAction="never" />
    </group>


    <item
        android:id="@+id/restart_from_menu"
        android:orderInCategory="100"
        android:title="@string/ex_menu_restart"
        app:showAsAction="never" />

    <item
        android:id="@+id/easy_mode"
        android:orderInCategory="50"
        android:icon="?attr/iconSchool"
        android:title="@string/menu_item_info"
        android:visible="false"
        app:showAsAction="always" />

</menu>